# Cpp-Project-SetUp

./: .gitignore  CMakeLists.txt  README.md
executables/: CMakeLists.txt  dummy.cpp
src/: CMakeLists.txt  dummy.cpp
tests/: CMakeLists.txt  dummyGTest.cpp
